mikec/tests/PASS/arrays/41.mc
/*Initialize 2d array*/
int main() {
    int a[5][5];
    a[0][0] = 00;
    a[0][1] = 01;
    a[0][2] = 02;
    a[0][3] = 03;
    a[0][4] = 04;

    a[1][0] = 10; 
    a[1][1] = 11;
    a[1][2] = 12;
    a[1][3] = 13;
    a[1][4] = 14;


    return 0;
}
